# local-ai-interface

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements-rocm.txt
configs/: base.yaml  llama-1b-instruct-playground.yaml
configs/examples/: lora-llama3-8b.yaml  qlora-llama3-70b.yaml
docker/: Dockerfile.finetune
docker/scripts/: entrypoint.sh
finetune/: __init__.py  __main__.py
finetune/cli/: __init__.py  config.py  convert.py  list.py  main.py  train.py
finetune/config/: __init__.py  loader.py  schema.py
finetune/core/: __init__.py  checkpoint.py  converter.py  ollama.py  trainer.py
finetune/utils/: data_formatting_funcs.py  logging.py  paths.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_cli.py  test_config.py
unsloth_compiled_cache/: UnslothGRPOTrainer.py
