[project]
name = "local-ai-interface"
version = "0.1.0"
description = "Docker tools for local AI: Open WebUI, Ollama, ComfyUI, and LLM finetuning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "torchao==0.13.0",
    "pytorch-triton-rocm>=2.1.0",
    "xformers>=0.0.32.post2",
    "dotenv>=0.9.9",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
]

[project.optional-dependencies]
train = [
    "unsloth",
    "trl>=0.10.0",
    "datasets>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
finetune = "finetune.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finetune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
